Fix #574 - Title and menu don't change colour as per design when in dark mode

--- a/assets/css/nav-styles.css
+++ b/assets/css/nav-styles.css
@@ -165,8 +165,12 @@ input:checked ~ .toggle-container {
 }
 
 
-.navbar ul li a button{
+.navbar ul li a button {
   background: transparent;
+}
+
+[data-theme='dark'] .navbar ul li a button {
+  color: #fff;
 }
 
 .navbar ul li a button:hover {
